--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p class="Header__description">
                     Welcome to the
                 </p>
-                <h1 class="header__title">
+                <h1 class="Header__title">
                     "The Joke Machine"
                 </h1>
             </header>
@@ -36,7 +36,7 @@
             <!-- Paragraph -->
             <div class="Container">
                 <p class="Container__text">
-                    Something very funny...
+                    Want to hear a joke?
                 </p>
             </div>
 
@@ -53,5 +53,6 @@
 
     <!-- Script -->
     <script src="./assets/dist/js/index.js"></script>
+    <script src="./assets/src/js/async.js"></script>
 </body>
 </html>
