Add "swipe to remove function" (doesn't really work yet)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
 
 
+    <!-- Axios -->
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
     <!-- Style -->
     <link rel="stylesheet" href="./assets/dist/css/index.css">
 </head>
@@ -53,6 +56,7 @@
 
     <!-- Script -->
     <script src="./assets/dist/js/index.js"></script>
-    <script src="./assets/src/js/async.js"></script>
+    <!-- <script src="./assets/src/js/async.js"></script> -->
+    <script src="./assets/src/js/axios.js"></script>
 </body>
 </html>
