Add "remove all" button

--- a/list.html
+++ b/list.html
@@ -26,8 +26,16 @@
                 Swipe to remove
             </h1>
 
+            <!-- Remove all -->
+            <button class="Remove-all">
+                Remove all
+            </button>
+
             <!-- List -->
             <ul class="List">
+                <p class="List__empty">
+                    The list is empty
+                </p>
 
                 <!-- List items go here -->
 
