--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swipe to remove</title>
+    <title>Joke list</title>
 
     <!-- Axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -12,6 +12,9 @@
     <!-- Style -->
     <link rel="stylesheet" href="./assets/dist/css/list.css">
 </head>
+
+
+
 <!-- Body -->
 <body class="Body">
 
@@ -46,6 +49,6 @@
 
 
     <!-- Script -->
-    <script src="./assets/src/js/list.js"></script>
+    <script src="./assets/dist/js/list.js"></script>
 </body>
 </html>
